# dataset-viewer

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
src/dataset_viewer/: server.py
